tests/ui/async-await/in-trait/send-on-async-fn-in-trait.stderr
error[E0277]: `impl Future<Output = ()> { <T as Foo>::test(..) }` cannot be sent between threads safely
  --> $DIR/send-on-async-fn-in-trait.rs:14:16
   |
LL |     needs_send(T::test());
   |     ---------- ^^^^^^^^^ `impl Future<Output = ()> { <T as Foo>::test(..) }` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `impl Future<Output = ()> { <T as Foo>::test(..) }`
note: required by a bound in `needs_send`
  --> $DIR/send-on-async-fn-in-trait.rs:11:23
   |
LL | fn needs_send(_: impl Send) {}
   |                       ^^^^ required by this bound in `needs_send`
help: consider further restricting the associated type
   |
LL | fn bar<T: Foo>() where <T as Foo>::test(..): Send {
   |                  ++++++++++++++++++++++++++++++++

error[E0277]: `impl Future<Output = i32> { <T as Foo>::test2(..) }` cannot be sent between threads safely
  --> $DIR/send-on-async-fn-in-trait.rs:19:16
   |
LL |     needs_send(T::test2());
   |     ---------- ^^^^^^^^^^ `impl Future<Output = i32> { <T as Foo>::test2(..) }` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `impl Future<Output = i32> { <T as Foo>::test2(..) }`
note: required by a bound in `needs_send`
  --> $DIR/send-on-async-fn-in-trait.rs:11:23
   |
LL | fn needs_send(_: impl Send) {}
   |                       ^^^^ required by this bound in `needs_send`
help: consider further restricting the associated type
   |
LL | fn bar2<T: Foo>() where <T as Foo>::test2(..): Send {
   |                   +++++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
